@startuml

class ReflectionField
{
    + ReflectionField(std::string_view name, size_t offset)
     * @brief : Construct a new ReflectionField object with the given name and offset
     * @param name : The name of the field
     * @param offset : The byte offset of the field within the class
    
    + {virtual} ~ReflectionField() = default
     * @brief : Virtual destructor for proper cleanup of derived classes
    
    + std::string_view GetName() const
     * @brief : Get the name of the field
     * @return std::string_view : The name of the field
    
    + size_t GetOffset() const
     * @brief : Get the byte offset of the field within the class
     * @return size_t : The byte offset of the field
    
    + {virtual} std::string_view GetTypeName()
     * @brief : Get the name of the field's type
     * @return std::string_view : The name of the field's type

    + {virtual} std::any GetValue(std::byte* instance) const
     * @brief : Get the value of the field from a given instance
     * @param instance : A pointer to the instance from which to retrieve the field's value
     * @return std::any : The value of the field wrapped in a std::any

    + {virtual} void SetValue(std::byte* instance, const std::any& value) const
     * @brief : Set the value of the field for a given instance
     * @param instance : A pointer to the instance for which to set the field's value
     * @param value : The new value for the field wrapped in a std::any
    ---
    # std::string name_
    # size_t offset_
}

class ReflectionFieldType
{
     * Template class representing a reflection field of a specific type
     * Inherits from ReflectionField and provides type-specific implementations for getting and setting field values
}

ReflectionField <|-- ReflectionFieldType

class Reflection
{
    + Reflection(std::byte* instance, std::vector<std::unique_ptr<ReflectionField>> fields)
     * @brief : Construct a new Reflection object with the given instance's pointer and fields
     * @param instance : A pointer to the instance being reflected
     * @param fields : A vector of unique pointers to ReflectionField objects representing the fields of the instance

    + std::any GetFieldValue(std::string_view field_name) const
     * @brief : Get the value of a field by its name
     * @param field_name : The name of the field to retrieve the value of
     * @return std::any : The value of the field wrapped in a std::any

    + void SetFieldValue(std::string_view field_name, const std::any& value)
     * @brief : Set the value of a field by its name
     * @param field_name : The name of the field to set the value of
     * @param value : The new value for the field wrapped in a std::any

    + std::string_view GetFieldTypeName(std::string_view field_name) const
     * @brief : Get the type name of a field by its name
     * @param field_name : The name of the field to retrieve the type name of
     * @return std::string_view : The type name of the field

    + std::vector<std::string> GetFieldNames() const
     * @brief : Get a list of all field names in the reflected instance
     * @return std::vector<std::string> : A vector containing the names of all fields
    ---
    - std::byte* instance_
    - std::unordered_map<std::string, std::unique_ptr<ReflectionField>> fields_
}

Reflection *-- ReflectionField

@enduml